--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,11 @@
     "filp/whoops":"*",
     "symfony/var-dumper":"*",
     "catfan/medoo":"*",
-    "twig/twig":"*"
+    "twig/twig":"*",
+    "jaeger/querylist": "^3.1",
+    "jaeger/querylist-ext-request":"^1.0",
+    "jaeger/querylist-ext-multi":"^1.0",
+    "jaeger/querylist-ext-login":"^1.0"
   },
   "repositories": {
     "packagist": {
